--- a/schema/contact.doc.html
+++ b/schema/contact.doc.html
@@ -204,7 +204,7 @@
             </a>
             Require by
         </h2>
-        <ul class="require-by"><li><a href="contactops.doc.html" title="ContactOps - ">ContactOps<em></em></a><li></ul>
+        <ul class="require-by"><li><a href="contactops.doc.html" title="ContactOps - ">ContactOps<em></em></a><li><li><a href="query.doc.html" title="Query - ">Query<em></em></a><li></ul>
     </div>
 </section>
 <footer>
