--- a/schema/removecontactinput.doc.html
+++ b/schema/removecontactinput.doc.html
@@ -135,6 +135,11 @@
                 MessageInput
             </a>
         </li>
+        <li  title="NotifyContactInput">
+            <a href="notifycontactinput.doc.html" class="slds-navigation-list--vertical__action slds-text-link--reset slds-truncate">
+                NotifyContactInput
+            </a>
+        </li>
         <li class="slds-is-active" title="RemoveContactInput">
             <a href="removecontactinput.doc.html" class="slds-navigation-list--vertical__action slds-text-link--reset slds-truncate">
                 RemoveContactInput
