--- a/schema/string.doc.html
+++ b/schema/string.doc.html
@@ -135,6 +135,11 @@
                 MessageInput
             </a>
         </li>
+        <li  title="NotifyContactInput">
+            <a href="notifycontactinput.doc.html" class="slds-navigation-list--vertical__action slds-text-link--reset slds-truncate">
+                NotifyContactInput
+            </a>
+        </li>
         <li  title="RemoveContactInput">
             <a href="removecontactinput.doc.html" class="slds-navigation-list--vertical__action slds-text-link--reset slds-truncate">
                 RemoveContactInput
@@ -205,7 +210,7 @@
             </a>
             Require by
         </h2>
-        <ul class="require-by"><li><a href="contact.doc.html" title="Contact - ">Contact<em></em></a><li><li><a href="createcontactinput.doc.html" title="CreateContactInput - ">CreateContactInput<em></em></a><li><li><a href="message.doc.html" title="Message - ">Message<em></em></a><li><li><a href="messageinput.doc.html" title="MessageInput - ">MessageInput<em></em></a><li><li><a href="query.doc.html" title="Query - ">Query<em></em></a><li><li><a href="removecontactinput.doc.html" title="RemoveContactInput - ">RemoveContactInput<em></em></a><li><li><a href="updatecontactinput.doc.html" title="UpdateContactInput - ">UpdateContactInput<em></em></a><li><li><a href="directive.spec.html" title="__Directive - A Directive provides a way to describe alternate runtime execution and type validation behavior in a GraphQL document.
+        <ul class="require-by"><li><a href="contact.doc.html" title="Contact - ">Contact<em></em></a><li><li><a href="createcontactinput.doc.html" title="CreateContactInput - ">CreateContactInput<em></em></a><li><li><a href="message.doc.html" title="Message - ">Message<em></em></a><li><li><a href="messageinput.doc.html" title="MessageInput - ">MessageInput<em></em></a><li><li><a href="notifycontactinput.doc.html" title="NotifyContactInput - ">NotifyContactInput<em></em></a><li><li><a href="query.doc.html" title="Query - ">Query<em></em></a><li><li><a href="removecontactinput.doc.html" title="RemoveContactInput - ">RemoveContactInput<em></em></a><li><li><a href="updatecontactinput.doc.html" title="UpdateContactInput - ">UpdateContactInput<em></em></a><li><li><a href="directive.spec.html" title="__Directive - A Directive provides a way to describe alternate runtime execution and type validation behavior in a GraphQL document.
 
 In some cases, you need to provide options to alter GraphQL's execution behavior in ways field arguments will not suffice, such as conditionally including or skipping a field. Directives provide this by describing additional information to the executor.">__Directive<em>A Directive provides a way to describe alternate runtime execution and type validation behavior in a GraphQL document.
 
